--- a/Testing02/App.xaml
+++ b/Testing02/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Testing02"
-             StartupUri="TestCrud.xaml">
+             StartupUri="TestUIDashboardFix.xaml">
     <Application.Resources>
+        
         <!-- Copas dari internet buat design UI -->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
