--- a/Testing02/Ukuran Hewan/CrudUkuranHewan.xaml
+++ b/Testing02/Ukuran Hewan/CrudUkuranHewan.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Testing02.CrudJenisHewan"
+﻿<UserControl x:Class="Testing02.CrudUkuranHewan"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,10 +8,10 @@
              d:DesignHeight="600" d:DesignWidth="824">
     <Grid>
         <StackPanel>
-            <Grid Width="450" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="10 10">
+            <Grid Width="450" VerticalAlignment="Top" HorizontalAlignment="Center">
                 <StackPanel>
-                    <Grid Height="55">
-                        <TextBlock Text="Jenis Hewan" FontSize="20" Margin="10" HorizontalAlignment="Center"/>
+                    <Grid Height="50">
+                        <TextBlock Text="Ukuran Hewan" FontSize="20" Margin="10" HorizontalAlignment="Center"/>
                     </Grid>
 
                     <Grid Height="50">
@@ -20,18 +20,8 @@
                             <ColumnDefinition Width="8*"/>
                             <ColumnDefinition Width="225*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="ID Jenis Hewan" Margin="10,12,2,11" VerticalAlignment="Center" FontSize="20"/>
-                        <TextBox x:Name="IdJenisHewanText" Grid.Column="2" Margin="10 10" Padding="2" VerticalAlignment="Center" IsReadOnly="True"/>
-                    </Grid>
-
-                    <Grid Height="50">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="ID Pegawai" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
-                        <ComboBox x:Name="ComboBoxIdPegawai" Margin="10 10" Grid.Column="1">
-                        </ComboBox>
+                        <TextBlock Grid.Column="0" Text="ID Ukuran Hewan" Margin="10,12,2,11" VerticalAlignment="Center" FontSize="20"/>
+                        <TextBox x:Name="IdUkuranHewanText" Grid.Column="2" Margin="10 10" Padding="2" VerticalAlignment="Center" IsReadOnly="True"/>
                     </Grid>
 
                     <Grid Height="60">
@@ -39,10 +29,24 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Nama Jenis Hewan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
-                        <TextBox x:Name="NamaJenisHewanText" Grid.Column="1" Margin="10 10" Padding="2" VerticalAlignment="Center" TextChanged="TextSearch_TextChanged"/>
+                        <TextBlock Grid.Column="0" Text="Ukuran Hewan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
+                        <ComboBox x:Name="ComboBoxUkuranHewan" Grid.Column="1" Margin="10 10" FontSize="15" SelectedValuePath="Content">
+                            <ComboBoxItem IsSelected="True" FontSize="15">-- Pilih --</ComboBoxItem>
+                            <ComboBoxItem FontSize="15">Small</ComboBoxItem>
+                            <ComboBoxItem FontSize="15">Medium</ComboBoxItem>
+                            <ComboBoxItem FontSize="15">Large</ComboBoxItem>
+                            <ComboBoxItem FontSize="15">Extra Large</ComboBoxItem>
+                        </ComboBox>
                     </Grid>
 
+                    <Grid Height="50">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Cari Ukuran" FontSize="20" Margin="10 10" VerticalAlignment="Center"/>
+                        <TextBox x:Name="CariUkuranText" Grid.Column="1" Padding="2" VerticalAlignment="Center" TextChanged="CariUkuranText_TextChanged" Margin="10 10"/>
+                    </Grid>
 
                     <Grid Height="50">
                         <Grid.ColumnDefinitions>
