--- a/Testing02/CrudJasaLayanan.xaml
+++ b/Testing02/CrudJasaLayanan.xaml
@@ -1,17 +1,17 @@
-﻿<UserControl x:Class="Testing02.CrudHewan"
+﻿<UserControl x:Class="Testing02.CrudJasaLayanan"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Testing02"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="824">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <StackPanel>
             <Grid Width="450" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="10 10">
                 <StackPanel>
                     <Grid Height="45">
-                        <TextBlock Text="Hewan" FontSize="20" Margin="0"  HorizontalAlignment="Center"/>
+                        <TextBlock Text="Jasa Layanan" FontSize="20" Margin="0"  HorizontalAlignment="Center"/>
                     </Grid>
 
                     <Grid Height="50">
@@ -19,8 +19,8 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="ID Hewan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
-                        <TextBox x:Name="IdHewanText" Grid.Column="2" Margin="10 10" Padding="2" VerticalAlignment="Center" IsReadOnly="True"/>
+                        <TextBlock Grid.Column="0" Text="ID Jasa Layanan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
+                        <TextBox x:Name="IdJasaLayananText" Grid.Column="2" Margin="10 10" Padding="2" VerticalAlignment="Center" IsReadOnly="True"/>
                     </Grid>
 
                     <Grid Height="50">
@@ -28,18 +28,8 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="ID Jenis Hewan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
-                        <ComboBox x:Name="ComboBoxIdJenisHewan" Margin="10 10" Grid.Column="1">
-                        </ComboBox>
-                    </Grid>
-
-                    <Grid Height="50">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="ID Customer" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
-                        <ComboBox x:Name="ComboBoxIdCustomer" Margin="10 10" Grid.Column="1">
+                        <TextBlock Grid.Column="0" Text="ID Ukuran Hewan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
+                        <ComboBox x:Name="ComboBoxIdUkuranHewan" Margin="10 10" Grid.Column="1">
                         </ComboBox>
                     </Grid>
 
@@ -48,17 +38,17 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Nama Hewan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
-                        <TextBox x:Name="NamaHewanText" Grid.Column="1" Margin="10 10" Padding="2" VerticalAlignment="Center" TextChanged="NamaHewanText_TextChanged"/>
+                        <TextBlock Grid.Column="0" Text="Nama Jasa Layanan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
+                        <TextBox x:Name="NamaJasaLayananText" Grid.Column="1" Margin="10 10" Padding="2" VerticalAlignment="Center" TextChanged="NamaJasaLayananText_TextChanged"/>
                     </Grid>
 
-                    <Grid Height="75">
+                    <Grid Height="60">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Tanggal Lahir Hewan (mm/dd/yyyy)" Margin="10 10" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap"/>
-                        <DatePicker Grid.Column="1" x:Name="DatePickTglLahir" Margin="5 5"></DatePicker>
+                        <TextBlock Grid.Column="0" Text="Harga Jasa Layanan" Margin="10 10" VerticalAlignment="Center" FontSize="20"/>
+                        <TextBox x:Name="HargaJasaLayananText" Grid.Column="1" Margin="10 10" Padding="2" VerticalAlignment="Center"/>
                     </Grid>
 
                     <Grid Height="50">
@@ -86,4 +76,3 @@
         </StackPanel>
     </Grid>
 </UserControl>
-  
